# Praxis

./: .env.example  .gitignore  README.md  bun.lockb  eslint.config.mjs  next.config.ts  package.json  praxis-product-capstone-spec.md  tsconfig.json
aegis/: .gitignore  Anchor.toml
aegis/programs/aegis/: Cargo.toml
aegis/programs/aegis/src/: constants.rs  error.rs  events.rs  instructions.rs  lib.rs  state.rs
aegis/programs/aegis/src/instructions/: agent_transfer.rs  agent_transfer_spl.rs  close_policy.rs  configure_token.rs  fund_vault.rs  initialize_policy.rs  revoke_agent.rs  rotate_agent.rs  update_policy.rs  withdraw_vault.rs
aegis/programs/aegis/tests/: enforcement.rs
aegis/tests/: README.md
app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  twitter-image.tsx
app/app/: page.tsx
app/landing/: page.tsx
components/app/: ActivityLog.tsx  AppShell.tsx  AppSidebar.tsx  AuthGate.tsx  ClarifyPrompt.tsx  Composer.tsx  Conversation.tsx  MessageItem.tsx  PolicyChangeCard.tsx  PolicyCheckBanner.tsx  (+12 more)
data/: capabilities.ts  threads.ts  usecases.ts
docs/: ARCHITECTURE.md  DEPLOY.md  ENV.md  ORACLE_VM.md  ROADMAP.md  praxis-backend-api.md
prisma/: schema.prisma
scripts/: moneyshots.ts  oracle-vm-setup.sh  policychange-smoke.ts  praxis-demo.ts  reenable-multicycle.ts  reenable-smoke.ts  setup-token-accounts.ts  swapcheck.ts  tokencheck.ts
sdk/: LICENSE  README.md  package.json  tsconfig.json  tsup.config.ts
server/: env.ts  errors.ts  units.ts
shared/: package.json  tsconfig.json
signer/: README.md  handler.ts  index.ts
tests/: README.md
(+167 files in other folders)
